--- a/app/src/main/res/layout/activity_cities.xml
+++ b/app/src/main/res/layout/activity_cities.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cities">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Cities" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnTanger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="tangerRoute"
+            android:text="Tanger" />
+
+        <Button
+            android:id="@+id/btnOujda"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="oujdaRoute"
+            android:text="Oujda" />
+
+        <Button
+            android:id="@+id/btnRabat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="rabatRoute"
+            android:text="Rabat" />
+
+        <Button
+            android:id="@+id/btnCasablanca"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="casablancaRoute"
+            android:text="Casablanca" />
+
+        <Button
+            android:id="@+id/btnAgadir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="agadirRoute"
+            android:text="Agadir" />
+
+    </LinearLayout>
+</FrameLayout>
+
